@@ -2,6 +2,17 @@
 
 	* gtksourceview/gtksourcecompletion.c:
 	* gtksourceview/gtksourcecompletion.h:
+	* gtksourceview/gtksourcecompletiontrigger.c:
+	* gtksourceview/gtksourcecompletiontrigger.h:
+	* gtksourceview/gtksourcecompletiontriggerkey.c:
+	* tests/completion-simple.c:
+	Remove set_active func on completion.
+	Remove deactivate trigger func and added activate signal.
+
+2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gtksourceview/gtksourcecompletion.c:
+	* gtksourceview/gtksourcecompletion.h:
 	* gtksourceview/gtksourcecompletionproposal.c:
 	* gtksourceview/gtksourcecompletionproposal.h:
 	Fixed some doc warnings.
